@@ -32,6 +32,6 @@ if(len(sys.argv) > 1):
 	ADDON_HANDLE = int(sys.argv[1])
 	ADDON_PARAMS = parseParams(sys.argv[2][1:])
 
-	# Create addon data path
-	if(not os.path.isdir(os.path.dirname(ADDON_DATA_PATH))):
-		os.makedirs(os.path.dirname(ADDON_DATA_PATH))
+# Create addon data path
+if(not os.path.isdir(os.path.dirname(ADDON_DATA_PATH))):
+	os.makedirs(os.path.dirname(ADDON_DATA_PATH))
