@@ -208,6 +208,6 @@
 			<height>475</height>
 			<texture>timebar.png</texture>
 		</control>
-			
+
 	</controls>
 </window>
