@@ -1,3 +1,6 @@
+[B]Version 1.0.2[/B]
+- Added support for using this module with scripts as well as plugins
+
 [B]Version 1.0.1[/B]
 - Added downloadUrl(..) and decodeHtmlEntities(..) to web module
 - Added pydoc documentation to methods
